ingress-api-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistic-ingress
  namespace: logistic
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logistic-api
            port:
              number: 443
