ingress-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistic-client-ingress
  namespace: logistic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-tokens: "false"
    nginx.ingress.kubernetes.io/x-frame-options: "SAMEORIGIN"
    nginx.ingress.kubernetes.io/x-content-type-options: "nosniff"
    nginx.ingress.kubernetes.io/x-xss-protection: "1; mode=block"
spec:
  tls:
  - hosts:
    - logistic-web.com
    secretName: logistic-tls
  ingressClassName: nginx
  rules:
  - host: logistic-web.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logistic-client
            port:
              number: 80
