ingress-service-payment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistic-service-payment-ingress
  namespace: logistic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/add-headers: |
      X-Frame-Options: SAMEORIGIN
      X-Content-Type-Options: nosniff
      X-XSS-Protection: 1; mode=block
    nginx.ingress.kubernetes.io/server-tokens: "false"
spec:
  tls:
  - hosts:
    - logistic-payment
    secretName: logistic-payment-tls
  ingressClassName: nginx
  rules:
  - host: logistic-payment
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logistic-payment
            port:
              number: 443
